--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,18 @@
-.container-fluid {
-  padding-right: 0;
-  padding-left: 0;
+/*.container-fluid{
+	padding-right: 0;
+	padding-left: 0;
 }
 
-.row {
-  margin-left: 0;
-  margin-right: 0;
-}
-
+.row{
+	margin-left: 0;
+	margin-right: 0;
+}*/
 header {
   height: 100vh;
   width: 100%;
   background-image: url("../images/background.png");
   background-size: cover;
+  text-align: center;
   /*	.logo{
   		display: block;
   		width: 50%;
@@ -24,6 +24,7 @@ header {
 body {
   font-family: "Roboto", sans-serif;
   color: #000;
+  margin: auto 0;
 }
 
 button {
@@ -53,12 +54,11 @@ h1 {
 
 .fa-arrow-circle-down {
   font-size: 4vw;
-  text-align: center;
-  display: block !important;
   padding-top: 4vw;
 }
 .fa-arrow-circle-down:hover {
   color: #fac843;
+  cursor: pointer;
 }
 
 .about {
