--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@ $body-font: 'Roboto', sans-serif;
 
 $yellow: #fac843;
 
-/*.container-fluid{
+.container-fluid{
 	padding-right: 0;
 	padding-left: 0;
 }
@@ -12,21 +12,14 @@ $yellow: #fac843;
 .row{
 	margin-left: 0;
 	margin-right: 0;
-}*/
+}
 
 header{
 	height: 100vh;
 	width: 100%;
 	background-image: url('../images/background.png');
-	background-size: cover;	
+	background-size: cover;
 	text-align: center;
-
-/*	.logo{
-		display: block;
-		width: 50%;
-		margin: 0 auto;
-		padding-top: 15px;
-	}*/
 }
 
 body {
@@ -48,7 +41,7 @@ h1 {
 }
 
 .hello {
-	font-size: 12vw;
+	font-size: 12em;
 	text-align: right;
 	font-family: $heading-font;
 	font-weight: 100;
@@ -61,8 +54,8 @@ h1 {
 }
 
 .fa-arrow-circle-down {
-	font-size: 4vw;
-	padding-top: 4vw;
+	font-size: 4em;
+	padding-top: 2em;
 
 	&:hover {
 		color: $yellow;
@@ -71,7 +64,7 @@ h1 {
 }
 
 .about {
-	height: 100vh;
+	height: 90vh;
 	width: 100%;
 	background-image: url('../images/background2.png');
 	background-size: cover;
@@ -83,27 +76,32 @@ h1 {
 	}
 
 	h2 {
-		font-size: 9vw;
+		font-size: 8em;
 		font-family: $heading-font;
 		font-weight: 100;
 		padding: 100px 0px 0px 40px;
 	}
 
 	p {
-		font-size: 1vw;
+		font-size: 1em;
 		margin-left: 150px;
 	}
 }
 
 .experience {
-	font-size: 0.75vw;
+	font-size: 0.75em;
 	margin-left: 150px;
 }
 
-.fa-linkedin, .fa-envelope {
-	color: #000;
+footer {
+	p {
+		padding-left: 2em;
+	}
+	.fa-linkedin, .fa-envelope {
+		color: #000;
 
-	&:hover {
-		color: $yellow;
+		&:hover {
+			color: $yellow;
+		}
 	}
 }
